# kvbfs

./: .gitignore  CMakeLists.txt  README.md  kvbfs想法文档.txt  文件系统新想法2.md
.claude/: settings.local.json
cfs/: README.md  client.py  config.py  daemon.py  mcp_server.py  pyproject.toml  requirements.txt
cfs/backends/: __init__.py  base.py  llamacpp.py  openai.py
cfs/scripts/: fix_proxy.sh  fix_proxy2.sh  start.sh  stop.sh  test_launch.sh  wsl_proxy_test.sh
cfs/tests/: test_backends.py  test_client.py  test_daemon.py  test_e2e.sh  test_local_llm.sh  test_mcp.py
docs/plans/: 2026-02-02-kvbfs-design.md  2026-02-02-kvbfs-implementation.md  2026-02-16-cfs-llama-integration-design.md  2026-02-17-memory-e2e-testing-design.md  2026-02-19-versions-virtual-directory-design.md  2026-02-19-versions-virtual-directory.md
scripts/: mount.sh  test_e2e_nvme.sh  umount.sh
sim/: CMakeLists.txt  cmd_dispatch.c  cmd_dispatch.h  kv_mem.c  kv_mem.h  main.c
src/: context.c  context.h  events.c  events.h  fuse_ops.c  inode.c  inode.h  kv_nvme.c  kv_rocksdb.c  kv_store.c  kv_store.h  kvbfs.h  llm.c  llm.h  main.c  mem.c  mem.h  nvme_kv_proto.h  super.c  super.h  utils.c  version.c  version.h  vfs_versions.c  vfs_versions.h
tests/: CMakeLists.txt  test_inode.c  test_integration.c  test_kv_store.c  test_kvbfs.sh  test_mem_ioctl.c
